chore: paginators to 10,20,50

--- a/web/angular-wallet/src/locales/bg.json
+++ b/web/angular-wallet/src/locales/bg.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "Акаунтът на получателя няма публичен ключ.",
   "error_recipient_no_public_key_announcement": "Акаунтът на получателя няма публичен ключ, трябва да прикачи съобщение за публичен ключ.",
   "error_refund_already_sent": "Възстановяването на сумата вече е изпратено.",
-  "error_send_money": "Възникна неизвестна грешка! Signa може да бъде изпратена или не.",
+  "error_send_money": "Хм... прехвърлянето не успя по неизвестни причини. Съжаляваме за неудобството 🤷",
   "error_server_connect": "Неуспешно свързване със сървъра.",
   "error_set_reward_recipient": "Възникна неизвестна грешка! Не можете да се присъедините към басейна.",
   "error_transaction_already_signed": "Транзакцията вече е подписана.",
@@ -577,5 +577,7 @@
   "reset_wallet_hint": "Нулирането на портфейла премахва всички локално съхранени данни, акаунти и настройки от портфейла. Можете да импортирате отново всичките си акаунти, като използвате съответната фраза за възстановяване. Вашите Signa и токени се съхраняват сигурно в блокчейна и следователно не се губят, докато притежавате фразите за възстановяване.",
   "welcome_to_wallet": "Добре дошли в портфейла Signum Phoenix",
   "refresh_transactions_hint": "Презареждане/Опресняване на последните транзакции",
-  "desktop": "работен плот"
+  "desktop": "работен плот",
+  "success_send_message": "Съобщението е изпратено успешно",
+  "error_send_message": "Хм... изпращането на съобщението не бе успешно поради неизвестни причини."
 }
