--- a/web/angular-wallet/src/locales/hi.json
+++ b/web/angular-wallet/src/locales/hi.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "प्राप्तकर्ता खाते में सार्वजनिक कुंजी नहीं है।",
   "error_recipient_no_public_key_announcement": "प्राप्तकर्ता खाते में सार्वजनिक कुंजी नहीं है, सार्वजनिक कुंजी घोषणा संलग्न करनी होगी।",
   "error_refund_already_sent": "रिफंड पहले ही भेजा जा चुका है।",
-  "error_send_money": "एक अज्ञात त्रुटि हुई! साइना भेजा जा सकता है या नहीं भेजा जा सकता है।",
+  "error_send_money": "हम्म... कुछ अज्ञात कारणों से स्थानांतरण विफल रहा। क्षमा करें, असुविधा के लिए 🤷",
   "error_server_connect": "सर्वर से कनेक्ट नहीं कर सकते।",
   "error_set_reward_recipient": "एक अज्ञात त्रुटि हुई! आप पूल में शामिल नहीं हो सके।",
   "error_transaction_already_signed": "लेन-देन पर पहले ही हस्ताक्षर हो चुके हैं।",
@@ -577,5 +577,7 @@
   "reset_wallet_hint": "वॉलेट को रीसेट करने से सभी स्थानीय रूप से संग्रहीत डेटा, खातों और सेटिंग्स को वॉलेट से हटा दिया जाता है। आप संबंधित पुनर्प्राप्ति वाक्यांश का उपयोग करके अपने सभी खातों को पुनः आयात कर सकते हैं। आपके सिग्ना और टोकन ब्लॉकचैन पर सुरक्षित रूप से संग्रहीत हैं और इसलिए जब तक आप पुनर्प्राप्ति वाक्यांशों के कब्जे में हैं तब तक खो नहीं जाते हैं।",
   "welcome_to_wallet": "सिग्नम फीनिक्स वॉलेट में आपका स्वागत है",
   "refresh_transactions_hint": "नवीनतम लेनदेन को रीलोड/रिफ्रेश करें",
-  "desktop": "डेस्कटॉप"
+  "desktop": "डेस्कटॉप",
+  "success_send_message": "संदेश सफलतापूर्वक भेजा जा चुका है",
+  "error_send_message": "हम्म... कुछ अज्ञात कारणों से संदेश भेजना विफल रहा."
 }
