--- a/web/angular-wallet/src/locales/ru.json
+++ b/web/angular-wallet/src/locales/ru.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "Учетная запись получателя не имеет публичного ключа.",
   "error_recipient_no_public_key_announcement": "Аккаунт получателя не имеет публичного ключа, необходимо приложить сообщение с публичным ключом.",
   "error_refund_already_sent": "Возврат уже отправлен.",
-  "error_send_money": "Произошла неизвестная ошибка! Signa может быть отправлена или нет.",
+  "error_send_money": "Хм... передача не удалась по неизвестным причинам. Извините, за неудобства 🤷",
   "error_server_connect": "Не удалось подключиться к серверу.",
   "error_set_reward_recipient": "Произошла неизвестная ошибка! Вы не смогли присоединиться к пулу.",
   "error_transaction_already_signed": "Транзакция уже подписана.",
@@ -577,5 +577,7 @@
   "reset_wallet_hint": "Сброс кошелька удаляет все локально сохраненные данные, учетные записи и настройки из кошелька. Вы можете повторно импортировать все свои учетные записи, используя соответствующую фразу восстановления. Ваша Signa и токены надежно хранятся в блокчейне и поэтому не теряются до тех пор, пока у вас есть фразы для восстановления.",
   "welcome_to_wallet": "Добро пожаловать в кошелек Signum Phoenix",
   "refresh_transactions_hint": "Перезагрузить/обновить последние транзакции",
-  "desktop": "Рабочий стол"
+  "desktop": "Рабочий стол",
+  "success_send_message": "Сообщение успешно отправлено",
+  "error_send_message": "Хм... отправка сообщения не удалась по неизвестным причинам."
 }
