--- a/web/angular-wallet/src/locales/sr.json
+++ b/web/angular-wallet/src/locales/sr.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "Налог примаоца нема јавни кључ.",
   "error_recipient_no_public_key_announcement": "Налог примаоца нема јавни кључ, мора приложити најаву јавног кључа.",
   "error_refund_already_sent": "Поврат је већ послат.",
-  "error_send_money": "Дошло је до непознате грешке! Сигна може бити послата или не.",
+  "error_send_money": "Хм... трансфер није успео из непознатих разлога. Извините због непријатности 🤷",
   "error_server_connect": "Није могао повезати на сервер.",
   "error_set_reward_recipient": "Дошло је до непознате грешке! Ниси могао да се придружиш базену.",
   "error_transaction_already_signed": "Трансакција је већ потписана.",
@@ -577,5 +577,7 @@
   "reset_wallet_hint": "Ресетовање новчаника уклања све локално сачуване податке, налоге и подешавања из новчаника. Можете поново да увезете све своје налоге користећи одговарајућу фразу за опоравак. Ваша Сигна и токени су безбедно ускладиштени на блокчејну и стога нису изгубљени све док имате фразе за опоравак.",
   "welcome_to_wallet": "Добродошли у Сигнум Пхоеник Валлет",
   "refresh_transactions_hint": "Поново учитај/освежи најновије трансакције",
-  "desktop": "Десктоп"
+  "desktop": "Десктоп",
+  "success_send_message": "Порука је послата",
+  "error_send_message": "Хмм... слање поруке није успело из непознатих разлога."
 }
