--- a/web/angular-wallet/src/locales/ca.json
+++ b/web/angular-wallet/src/locales/ca.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "El compte del destinatari no té clau pública.",
   "error_recipient_no_public_key_announcement": "El compte destinatari no té una clau pública, ha d'adjuntar un anunci de clau pública.",
   "error_refund_already_sent": "El reembossament ja s'ha enviat.",
-  "error_send_money": "S'ha produït un error desconegut. Signa es pot enviar o no.",
+  "error_send_money": "Hmm... la transferència va fallar per alguns motius desconeguts. Disculpeu, per les molèsties 🤷",
   "error_server_connect": "No s'ha pogut connectar al servidor.",
   "error_set_reward_recipient": "S'ha produït un error desconegut. No podríeu unir-vos a la piscina.",
   "error_transaction_already_signed": "La transacció ja està signada.",
@@ -577,5 +577,7 @@
   "reset_wallet_hint": "El restabliment de la cartera elimina totes les dades, els comptes i la configuració emmagatzemats localment de la cartera. Podeu tornar a importar tots els vostres comptes mitjançant la frase de recuperació corresponent. El vostre signe i fitxes s'emmagatzemen de forma segura a la cadena de blocs i, per tant, no es perden mentre tingueu les frases de recuperació.",
   "welcome_to_wallet": "Benvingut a Signum Phoenix Wallet",
   "refresh_transactions_hint": "Recarrega/Actualitza les últimes transaccions",
-  "desktop": "Escriptori"
+  "desktop": "Escriptori",
+  "success_send_message": "Missatge enviat correctament",
+  "error_send_message": "Hmm... l'enviament del missatge ha fallat per alguns motius desconeguts."
 }
