--- a/web/angular-wallet/src/locales/el.json
+++ b/web/angular-wallet/src/locales/el.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "Ο λογαριασμός παραλήπτη δεν έχει δημόσιο κλειδί.",
   "error_recipient_no_public_key_announcement": "Ο λογαριασμός παραλήπτη δεν έχει δημόσιο κλειδί, πρέπει να επισυνάψει ανακοίνωση δημόσιου κλειδιού.",
   "error_refund_already_sent": "Η επιστροφή χρημάτων έχει ήδη σταλεί.",
-  "error_send_money": "Παρουσιάστηκε άγνωστο σφάλμα! Η Signa ενδέχεται να αποσταλεί ή όχι",
+  "error_send_money": "Χμ... η μεταφορά απέτυχε για άγνωστους λόγους. Συγγνώμη, για την ταλαιπωρία 🤷",
   "error_server_connect": "Δε μπόρεσε να συνδεθεί με τον διακομιστή.",
   "error_set_reward_recipient": "Παρουσιάστηκε άγνωστο σφάλμα! Δεν μπορούσατε να συμμετάσχετε στην πισίνα.",
   "error_transaction_already_signed": "Η συναλλαγή έχει ήδη υπογραφεί.",
@@ -577,5 +577,7 @@
   "reset_wallet_hint": "Η επαναφορά του πορτοφολιού αφαιρεί όλα τα τοπικά αποθηκευμένα δεδομένα, λογαριασμούς και ρυθμίσεις από το πορτοφόλι. Μπορείτε να εισαγάγετε ξανά όλους τους λογαριασμούς σας χρησιμοποιώντας την αντίστοιχη φράση ανάκτησης. Το Signa και τα διακριτικά σας αποθηκεύονται με ασφάλεια στο blockchain και επομένως δεν χάνονται όσο διαθέτετε τις φράσεις ανάκτησης.",
   "welcome_to_wallet": "Καλώς ήρθατε στο Πορτοφόλι Signum Phoenix",
   "refresh_transactions_hint": "Επαναφόρτωση/Ανανέωση των τελευταίων συναλλαγών",
-  "desktop": "Επιφάνεια εργασίας"
+  "desktop": "Επιφάνεια εργασίας",
+  "success_send_message": "το μήνυμα εστάλη επιτυχώς",
+  "error_send_message": "Χμ... η αποστολή του μηνύματος απέτυχε για άγνωστους λόγους."
 }
