--- a/web/angular-wallet/src/locales/en.json
+++ b/web/angular-wallet/src/locales/en.json
@@ -193,7 +193,7 @@
   "error_recipient_no_public_key": "Recipient account does not have public key.",
   "error_recipient_no_public_key_announcement": "Recipient account does not have a public key, must attach a public key announcement.",
   "error_refund_already_sent": "Refund already sent.",
-  "error_send_money": "An unknown error occurred! Signa may or may not be sent.",
+  "error_send_money": "Hmm... the transfer failed for some unknown reasons. Sorry, for inconvencience 🤷",
   "error_server_connect": "Could not connect to server.",
   "error_set_reward_recipient": "An unknown error occurred! You could not join the pool.",
   "error_transaction_already_signed": "Transaction already signed.",
@@ -577,5 +577,7 @@
   "reset_wallet_hint": "Resetting the wallet removes all locally stored data, accounts and settings from the wallet. You can re-import all your accounts using the respective recovery phrase. Your Signa and tokens are securely stored on the blockchain and are therefore not lost as long as you are in possession of the recovery phrases.",
   "welcome_to_wallet": "Welcome to Signum Phoenix Wallet",
   "refresh_transactions_hint": "Reload/Refresh latest transactions",
-  "desktop": "Desktop"
+  "desktop": "Desktop",
+  "success_send_message": "Message sent successfully",
+  "error_send_message": "Hmm... sending the message failed for some unknown reasons."
 }
