--- a/web/angular-wallet/src/locales/gl.json
+++ b/web/angular-wallet/src/locales/gl.json
@@ -176,7 +176,7 @@
   "error_recipient_no_public_key": "A conta do destinatario non ten clave pública.",
   "error_recipient_no_public_key_announcement": "A conta do destinatario non ten unha clave pública, debe anexar un anuncio de clave pública.",
   "error_refund_already_sent": "Reembolso xa enviado.",
-  "error_send_money": "Produciuse un erro descoñecido. Signa pódese enviar ou non.",
+  "error_send_money": "Hmm... a transferencia fallou por uns motivos descoñecidos. Perdón, polas molestias 🤷",
   "error_server_connect": "Non se puido conectar ao servidor.",
   "error_set_reward_recipient": "Produciuse un erro descoñecido. Non podías unirte á piscina.",
   "error_transaction_already_signed": "Transacción xa asinada.",
@@ -577,5 +577,7 @@
   "reset_wallet_hint": "Restablecer a carteira elimina todos os datos, contas e configuracións almacenados localmente da carteira. Podes volver importar todas as túas contas usando a frase de recuperación respectiva. Os teus signos e tokens almacénanse de forma segura na cadea de bloques e, polo tanto, non se perden mentres esteas en posesión das frases de recuperación.",
   "welcome_to_wallet": "Benvido a Signum Phoenix Wallet",
   "refresh_transactions_hint": "Recarga/Actualiza as últimas transaccións",
-  "desktop": "Escritorio"
+  "desktop": "Escritorio",
+  "success_send_message": "Mensaxe enviada correctamente",
+  "error_send_message": "Hmm... non se puido enviar a mensaxe por algúns motivos descoñecidos."
 }
